# mctp-rs

./: .cursorrules  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  docs.yml
backlog/: config.yml
backlog/archive/tasks/: task-11 - Implement-Bridge.md
backlog/docs/: MCTP-1.3.3-Specification.md
src/: deserialize.rs  endpoint_id.rs  error.rs  lib.rs  mctp_command_code.rs  mctp_completion_code.rs  mctp_control_message_header.rs  mctp_message_tag.rs  mctp_message_type.rs  mctp_packet_context.rs  mctp_sequence_number.rs  mctp_transport_header.rs  serialize.rs  test_util.rs
src/control_command/: get_endpoint_id.rs  mod.rs  set_endpoint_id.rs
src/medium/: mod.rs  smbus_espi.rs  util.rs
src/message_header/: mctp_control_message_header.rs  mctp_vendor_defined_pci_message_header.rs  mod.rs
src/message_type/: mctp_control.rs  mod.rs  odp.rs  vendor_defined_pci.rs
