[package]
name = "mctp-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
espi = ["dep:espi-device"]
odp = ["dep:uuid", "dep:embedded-batteries"]

[dependencies]
espi-device = { git = "https://github.com/OpenDevicePartnership/haf-ec-service", optional = true }
bit-register = { git = "https://github.com/OpenDevicePartnership/odp-utilities", package = "bit-register" }
num_enum = { version = "0.7.4", default-features = false }
smbus-pec = "1.0.1"
thiserror = { version = "2.0.16", default-features = false }
uuid = { version = "=1.17.0", default-features = false, optional = true }
embedded-batteries = { version = "0.2.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.0", features = ["macros", "rt"] }
rstest = "0.26.1"
